@@ -158,11 +158,11 @@ class Button(object):
 
     css_class
         The name of a CSS class to attach to the button. In the default
-        form rendering, this string will be appended to ``btnText submit``
-        to become part of the ``class`` attribute of the button. For
-        example, if ``css_class`` was ``foobar`` then the resulting default
-        class becomes ``btnText submit foobar``. Default: ``None`` (no
-        additional class).
+        form rendering, this string will replace the default button type
+        (either ``btn-primary`` or ``btn-default``) on the the ``class``
+        attribute of the button. For example, if ``css_class`` was
+        ``btn-danger`` then the resulting default class becomes
+        ``btn btn-danger``. Default: ``None`` (use default class).
     """
     def __init__(self, name='submit', title=None, type='submit', value=None,
                  disabled=False, css_class=None):
