@@ -41,6 +41,10 @@ Next release
 - Fixed handling of buttons in nested sequences.
   See https://github.com/Pylons/deform/issues/197
 
+- Have the button css_class override the default button class. This is
+  backwards-incompatible and will require users of css_class to add a
+  btn-default/btn-primary class to the css_class.
+
 2.0a2 (2013-10-18)
 ------------------
 
